// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout - Item Item.desktop should match snapshot when disabled 1`] = `
<div>
  <tr
    class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
    data-testid="checkout-cart-item-null"
  >
    <td
      class="MuiTableCell-root MuiTableCell-sizeMedium css-o1r1tr-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <div
          class="MuiBox-root css-1mdpkzj"
        >
          <img
            alt="!!! DELIVERY IMMEDIATELY !!!!!"
            class="MuiBox-root css-4w7ia0"
            src=""
          />
        </div>
        <div
          class="MuiBox-root css-1hbndq"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="checkout-manufacturer-name-undefined"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
            data-testid="checkout-product-name-undefined"
          >
            !!! DELIVERY IMMEDIATELY !!!!!
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="checkout-manufacturer-number-undefined"
          >
            MFR#
             
          </span>
        </div>
      </div>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1qto78x-MuiTableCell-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
        data-testid="checkout-unit-price-undefined"
      >
        Price unavailable
      </span>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1qto78x-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-dvxtzn"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-qty-available-undefined"
        >
          1
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-xn7l0x-MuiTypography-root"
        >
          in stock
        </span>
      </div>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1qto78x-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-40mi5u"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          data-testid="checkout-item-order-qty-undefined"
        >
          0
        </p>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Checkout - Item Item.desktop should match snapshot with mostly undefined parameters 1`] = `
<div>
  <tr
    class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
    data-testid="checkout-cart-item-undefined"
  >
    <td
      class="MuiTableCell-root MuiTableCell-sizeMedium css-1yoxrtx-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <div
          class="MuiBox-root css-1mdpkzj"
        >
          <img
            alt="Product picture"
            class="MuiBox-root css-4w7ia0"
            src=""
          />
        </div>
        <div
          class="MuiBox-root css-1hbndq"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="checkout-manufacturer-name-undefined"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
            data-testid="checkout-product-name-undefined"
          />
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="checkout-manufacturer-number-undefined"
          >
            MFR#
             
          </span>
        </div>
      </div>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1cubbo7-MuiTableCell-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
        data-testid="checkout-unit-price-undefined"
      >
        Price unavailable
      </span>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1cubbo7-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-dvxtzn"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-qty-available-undefined"
        >
          0
        </span>
      </div>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1cubbo7-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-40mi5u"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          data-testid="checkout-item-order-qty-undefined"
        >
          0
        </p>
      </div>
    </td>
  </tr>
  <tr
    class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
  >
    <td
      class="MuiTableCell-root MuiTableCell-sizeMedium css-11r1h0v-MuiTableCell-root"
      colspan="5"
    >
      <div
        class="MuiBox-root css-10bvlll"
      >
        <svg
          class="MuiBox-root css-fyrd4f"
          sx="[object Object]"
        >
          warning.svg
        </svg>
        <span
          class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
        >
          Item is out of stock or below desired quantity
        </span>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Checkout - Item Item.desktop should match snapshot with valid lineItem 1`] = `
<div>
  <tr
    class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
    data-testid="checkout-cart-item-null"
  >
    <td
      class="MuiTableCell-root MuiTableCell-sizeMedium css-o1r1tr-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-70qvj9"
      >
        <div
          class="MuiBox-root css-1mdpkzj"
        >
          <img
            alt="PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755"
            class="MuiBox-root css-4w7ia0"
            src=""
          />
        </div>
        <div
          class="MuiBox-root css-1hbndq"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="checkout-manufacturer-name-3"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
            data-testid="checkout-product-name-3"
          >
            PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
          </p>
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="checkout-manufacturer-number-3"
          >
            MFR#
             
          </span>
        </div>
      </div>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1qto78x-MuiTableCell-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
        data-testid="checkout-unit-price-3"
      >
        $0.82 ea
      </span>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1qto78x-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-dvxtzn"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-qty-available-3"
        >
          10
        </span>
        <span
          class="MuiTypography-root MuiTypography-caption css-xn7l0x-MuiTypography-root"
        >
          in stock
        </span>
      </div>
    </td>
    <td
      class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-sizeMedium css-1qto78x-MuiTableCell-root"
    >
      <div
        class="MuiBox-root css-40mi5u"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
          data-testid="checkout-item-order-qty-3"
        >
          1
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-120qz1h-MuiTypography-root"
          data-testid="checkout-item-total-price-3"
        >
          $0.82
        </p>
      </div>
    </td>
  </tr>
</div>
`;

exports[`Checkout - Item Item.mobile should match snapshot with mostly undefined parameters 1`] = `
<div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-undefined"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-undefined"
          >
            0
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-undefined"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-undefined"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-undefined"
        >
          MFR#
           
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-undefined"
              >
                0
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-undefined"
        >
          $0.00
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-undefined"
        >
          $0.00
        </h5>
      </div>
    </div>
    <div
      class="MuiBox-root css-l6kq9v"
    >
      <svg
        class="MuiBox-root css-1ay9vb9"
        sx="[object Object]"
      >
        warning.svg
      </svg>
      <span
        class="MuiTypography-root MuiTypography-caption css-1gbxt6n-MuiTypography-root"
      >
        Item is out of stock or below desired quantity
      </span>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Checkout - Item Item.mobile should match snapshot with valid lineItem 1`] = `
<div>
  <div
    class="MuiBox-root css-16686bg"
    data-testid="checkout-cart-item-null"
  >
    <div
      class="MuiBox-root css-i3pbo"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-x3cpnl"
          >
            <img
              alt="PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755"
              class="MuiBox-root css-4w7ia0"
              src=""
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-kfrp3-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
            data-testid="checkout-qty-available-3"
          >
            10
          </span>
          <p
            class="MuiTypography-root MuiTypography-body1 css-6apigl-MuiTypography-root"
          >
            in stock
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-name-3"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 css-4mc1p7-MuiTypography-root"
          data-testid="checkout-product-name-3"
        >
          PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
        </p>
        <span
          class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
          data-testid="checkout-manufacturer-number-3"
        >
          MFR#
           
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6 css-187pdxj-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-178yklu"
        >
          <div
            class="MuiBox-root css-pori7h"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
            >
              Order Qty
            </span>
            <div
              class="MuiBox-root css-d0uhtl"
            >
              <span
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                data-testid="checkout-item-order-qty-3"
              >
                1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-12tl881-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Price
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-unit-price-3"
        >
          $0.82
           
          ea
        </h5>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-6 css-kxm2zc-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ebnygn"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1xrvs54-MuiTypography-root"
          >
            Order Total
          </span>
        </div>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1efrlbf-MuiTypography-root"
          data-testid="checkout-item-total-price-3"
        >
          $0.82
        </h5>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root css-ibnnmb"
  >
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
    />
  </div>
</div>
`;
